# helios-cmdb

./: .gitignore  Cargo.toml  PLAN.md  README.md  flake.nix
crates/cmdb-ana-bridge/: Cargo.toml
crates/cmdb-ana-bridge/src/: bridge.rs  changebus.rs  envelopes.rs  lib.rs  subjects.rs
crates/cmdb-auth/: Cargo.toml
crates/cmdb-auth/src/: lib.rs
crates/cmdb-cli/: Cargo.toml
crates/cmdb-cli/src/: commands.rs  main.rs  output.rs
crates/cmdb-collectors/: Cargo.toml
crates/cmdb-collectors/src/: docker_socket.rs  k8s_observe.rs  lib.rs  ssh_facts.rs
crates/cmdb-core/: Cargo.toml
crates/cmdb-core/src/: change.rs  entity.rs  error.rs  fact.rs  id.rs  lib.rs  metamodel.rs  mock.rs  namespace.rs  relation.rs  source.rs  store.rs
crates/cmdb-embedding/: Cargo.toml
crates/cmdb-embedding/src/: lib.rs
crates/cmdb-http/: Cargo.toml
crates/cmdb-http/src/: gql.rs  lib.rs  metrics.rs  rest.rs  ui.rs
crates/cmdb-http/src/ui_assets/: index.html
crates/cmdb-mcp/: Cargo.toml
crates/cmdb-mcp/src/: http.rs  lib.rs  protocol.rs  stdio.rs  tools.rs
crates/cmdb-provenance/: Cargo.toml
crates/cmdb-provenance/src/: lib.rs
crates/cmdb-server/: Cargo.toml
crates/cmdb-server/src/: main.rs
crates/cmdb-store-pg/: Cargo.toml
crates/cmdb-store-pg/src/: cypher.rs  lib.rs  migration.rs  queries.rs  store.rs
crates/cmdb-tui/: Cargo.toml
crates/cmdb-tui/src/: lib.rs
migrations/: 0001_init.sql  0002_pgvector.sql  0003_age.sql  0004_api_tokens.sql  0005_notify_triggers.sql  0006_query_index.sql  0007_ana_v07_types.sql
ops/: backup.sh  regression-age.sh  restore.sh
