[package]
name = "cmdb-ana-bridge"
description = "ana (NATS A2A) bridge: subscribe to cc.fleet.> and serve cmdb.query.> RPC"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cmdb-core.workspace = true
cmdb-store-pg.workspace = true
async-nats.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures-util.workspace = true
