[package]
name = "cmdb-auth"
description = "Scoped API tokens: creation, hashing, verification, axum extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cmdb-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum.workspace = true
chrono.workspace = true
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
