[package]
name = "cmdb-http"
description = "axum REST + async-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cmdb-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
