[package]
name = "cmdb-http"
description = "axum REST + async-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cmdb-core.workspace = true
cmdb-store-pg.workspace = true
cmdb-embedding.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower-http.workspace = true
async-trait.workspace = true
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-axum = "7"
chrono.workspace = true
