[package]
name = "cmdb-mcp"
description = "MCP server (stdio + HTTP/SSE) — agent-native interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cmdb-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
