[package]
name = "cmdb-provenance"
description = "Confidence decay, ttl expiry, effective-fact computation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cmdb-core.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
