[package]
name = "cmdb-store-pg"
description = "Postgres store implementation for helios-cmdb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cmdb-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers = "0.23"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
