[package]
name = "cmdb-tui"
description = "ratatui-based topology browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cmdb-core.workspace = true
cmdb-store-pg.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde_json.workspace = true
